[package]
name = "yogachain-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization & Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# Cryptography
pqcrypto-kyber = "0.5.0"
pqcrypto-dilithium = "0.5.0"
blake3 = "1.5.0"
rand = "0.8.5"

# Logging
log = "0.4"
env_logger = "0.10"

# Async & Time Management
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
